--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,21 @@ a {
   text-decoration: none;
 }
 
+nav {
+  width: 30%;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+nav ul li {
+  color: var(--text-color);
+  cursor: pointer;
+}
+
 .container {
   max-width: 600px;
   margin: auto;
@@ -54,4 +69,20 @@ a {
 
 .hidden {
   display: none;
+}
+
+.cursor {
+  font-weight: 700;
+  animation: 1s blink step-end infinite;
+}
+
+@keyframes blink {
+  from,
+  to {
+    color: transparent;
+  }
+
+  50% {
+    color: var(--text-color);
+  }
 }
